--- a/src/backstage/AddSlang.module.css
+++ b/src/backstage/AddSlang.module.css
@@ -2,20 +2,17 @@
     width: 95%;
     margin: 0px auto;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .add-slang-container h2 {
     text-align: center;
-    width: 100%;
+    width: 80%;
     margin-bottom: 20px;
     margin-top: 0;
     font-family: "Your Desired Font", sans-serif;
     color: #333;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .slang-form {
@@ -57,6 +54,17 @@
     /* 添加虚线样式 */
 }
 
+.headerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-family: 'Pacifico', cursive;
+    font-size: 24px;
+    color: #333;
+}
 
 .image-preview {
     width: 100%;
@@ -199,5 +207,8 @@
     .splitter {
         display: none;
     }
-
+    
+    .add-slang-container h2{
+        display: none;
+    }
 }
